--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "/"
 languageCode = "jp"
 theme = "hello-friend"
 paginate = 5
+disqusShortname = "ryutah"
 
 [params]
   # dir name of your blog content (default is `content/posts`).
